--- a/website/templates/latest_posts.html
+++ b/website/templates/latest_posts.html
@@ -19,7 +19,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="single-blog-item mb-100" style="min-height: 680px;">
                     <a href="{{blog.get_absolute_url}}">
-                        <img src="/{{blog.image}}" alt="">
+                        <img src="/static/{{blog.image}}" alt="">
                     </a>
                     <!-- Blog Content -->
                     <div class="blog-content">
