--- a/website/templates/detail.html
+++ b/website/templates/detail.html
@@ -33,7 +33,7 @@
             <div class="col-12 col-lg-10 mb-100 mx-auto">
                 <!-- Blog Details Area -->
                 <div class="blog-details-area mx-auto">
-                    <img src="/static/{{post.image}}/" alt="{{post.title}}">
+                    <img src="/static/{{post.image}}" alt="{{post.title}}">
 
                     <h2 class="post-title">{{post.title}}</h2>
                     <div class="post-meta">
