--- a/website/templates/detail.html
+++ b/website/templates/detail.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% block content %}{% load static %}
-
+{% extends "base.html" %} {% block content %}{% load static %} {% load blog_tags %}
 <!-- ***** Breadcrumb Area Start ***** -->
 <div class="breadcumb-area bg-img bg-gradient-overlay" style="background-image: url({% static 'website/img/bg-img/12.jpg'  %});">
     <div class="container h-100">
@@ -40,7 +39,7 @@
                         <a href="#"><i class="icon_clock_alt"></i> {{post.publish}}</a>
                         <a href="#"><i class="icon_pencil-edit"></i> {{post.author}}</a>
                     </div>
-                    <p>{{post.body}}</p>
+                    <p>{{post.body|markdown|safe}}</p>
                 </div>
 
                 <!-- Post Share  -->
