--- a/staff/templates/doctors/editDoctor.html
+++ b/staff/templates/doctors/editDoctor.html
@@ -37,6 +37,7 @@
                                 <input class="form-control" type="password" name="password" value="{{emp.password}}" required>
                             </div>
                         </div>
+
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label>Gender</label>
@@ -97,7 +98,16 @@
                                 </select>
                             </div>
                         </div>
-
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label>Role</label>
+                                <select class="select" name='role'>
+                                    {% for value,text in choices.role %}
+                                    <option value="{{value}}" {% if emp.role == value %} selected {% endif %}>{{text}}</option>
+                                  {% endfor %}
+                                </select>
+                            </div>
+                        </div>
 
 
                         <div class="col-sm-6">
