--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -215,8 +215,8 @@
 
             <!-- Video Area -->
             <div class="col-12 col-lg-6">
-                <div class="dento-video-area mb-100">
-                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3wvVrkMKim8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="dento-video-area mb-100 mx-auto ">
+                    <iframe style="max-width:100% ;height:120%; " src="https://www.youtube-nocookie.com/embed/3wvVrkMKim8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
